dirmngr crashes if DIR.txt is empty
Closed, ResolvedPublic

Assigned To
Authored By
dkg
Feb 17 2015, 1:00 AM
Subscribers

Description

if DIR.txt in a crl cache is empty, dirmngr 1.1.1 segfaults.

This appears to also be relevant for dirmngr 2.1.2.

The attached patch (against 1.1.1) avoids the segfault, and instead shuts down
with an error message.

This is https://bugs.debian.org/776611

Details

Version
2.1.2

Event Timeline

werner set Due Date to Jun 10 2015, 2:00 AM.Jun 8 2015, 8:06 PM
werner added a project: gnupg.
werner changed Version from 1.1.1, 2.1.2 to 2.1.2.
werner removed Due Date.
werner added a subscriber: werner.

Fixed with commit 255dadd.

werner claimed this task.
werner removed a project: Restricted Project.