dirmngr: Avoid crash due to an empty crls.d/DIR.txt.

* dirmngr/crlcache.c (check_dir_version): Avoid segv.
--

GnuPG-bug-id: 1842
Debian-bug-id: 776611